# cmd/pledge/api/internal/types/types.go
@@ -21,10 +21,12 @@ type GetCodeReq struct {
 }
 
 type GetValidatorReq struct {
-	Kind int8   `form:"kind,options=0|1,optional"` // 获取验证者节点信息 0-所有 1-质押
-	Key  string `form:"key,optional"`              // key
-	Page uint64 `form:"page,optional,default=1"`
-	Size uint64 `form:"size,optional,default=10"`
+	Kind   int8   `form:"kind,options=0|1,optional"` // 获取验证者节点信息 0-所有 1-质押
+	Key    string `form:"key,optional"`              // key
+	Page   uint64 `form:"page,optional,default=1"`
+	Size   uint64 `form:"size,optional,default=10"`
+	SortBy int8   `form:"sortby,options=0|1,optional"` // 排序方式 0-质押总量 1-质押手续费
+	Sort   int8   `form:"sort,options=0|1,optional"`   // 排序方式 0-倒序 1-正序
 }
 
 type LoginReq struct {
@@ -70,7 +72,7 @@ type ValidatorInfo struct {
 	StakedTokens    float64 `json:"stakedTokens"`    // 总质押量
 	Rate            float64 `json:"rate"`            // 预期年利率
 	VotingPower     float64 `json:"votingPower"`     // 投票权
-	UnbindingPeriod float64 `json:"unbindingPeriod"` // 解绑期，最低的解绑到期时间戳
+	UnbindingPeriod string  `json:"unbindingPeriod"` // 解绑期，最低的解绑到期时间戳
 	HandlingFees    float64 `json:"handlingFees"`    // 质押手续费
 }
 
